--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 {% seo %}
 <link rel="shortcut icon" href="{{ "/favicon.ico" | relative_url }}">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
 {% feed_meta %}
 </head>
