--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -7,6 +7,7 @@
 {%- seo -%}
 <link rel="shortcut icon" href="{{ "/favicon.ico" | relative_url }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nprogress@0.2.0/nprogress.min.css">
 {% feed_meta %}
 </head>
 <body>
@@ -15,5 +16,9 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery-pjax@2.0.1/jquery.pjax.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/nprogress@0.2.0/nprogress.min.js"></script>
+<script>
+  NProgress.start();
+</script>
 </body>
 </html>
