--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -11,7 +11,9 @@
 {% feed_meta %}
 </head>
 <body>
-{{ content }}
+  <div id="pjax-container">
+    {{ content }}
+  </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.0/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery-pjax@2.0.1/jquery.pjax.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
