--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -11,18 +11,12 @@
 {% feed_meta %}
 </head>
 <body>
-<div id="pjax-container">
+<nav class="navbar navbar-light bg-light">
+  <a href="#">hehe</a>
+</nav>
 {{ content }}
-</div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.0/dist/jquery.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jquery-pjax@2.0.1/jquery.pjax.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/nprogress@0.2.0/nprogress.min.js"></script>
-<script>
-$(document).pjax('a', '#pjax-container');
-$(document).on('pjax:start', function() { NProgress.start(); });
-$(document).on('pjax:end',   function() { NProgress.done();  });
-</script>
 </body>
 </html>
