--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -24,6 +24,20 @@
     </div>
   </div>
 </nav>
+<div class="container-fluid">
+  <div class="row">
+    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+      <div class="sidebar-sticky">
+        fejf
+      </div>
+    </nav>
+    <main class="col-md-9 ml-sm-auto col-lg-10 px-4" role="main">
+      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h1 class="h2">Dashboard</h1>
+      </div>
+    </main>
+  </div>
+</div>
 {{ content }}
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.0/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
