--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -7,6 +7,7 @@
 {%- seo -%}
 <link rel="shortcut icon" href="{{ "/favicon.ico" | relative_url }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="{{ "/assets/css/dashboard.css" | relative_url }}">
 {% feed_meta %}
 </head>
 <body>
