--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -24,14 +24,14 @@
   <div class="row">
     <nav class="col-md-2 d-none d-md-block bg-light sidebar">
       <div class="sidebar-sticky">
-        <ul>
+        <ul class="list-unstyled">
           <li><a href="#">序言</a></li>
           <li>
             <svg class="bi bi-caret-right-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path d="M12.14 8.753l-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 011.659-.753l5.48 4.796a1 1 0 010 1.506z"/>
             </svg>
-            <a href="#"基础></a>
-            <ul>
+            <a href="#">基础</a>
+            <ul class="list-unstyled">
               <li><a href="#">开发规范</a></li>
             </ul>
           </li>
