--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -7,6 +7,7 @@
 {%- seo -%}
 <link rel="shortcut icon" href="{{ "/favicon.ico" | relative_url }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="{{ "/assets/css/iconfont.css" | relative_url }}">
 <link rel="stylesheet" href="{{ "/assets/css/dashboard.css" | relative_url }}">
 {% feed_meta %}
 </head>
@@ -25,11 +26,13 @@
     <nav class="col-md-2 d-none d-md-block bg-light sidebar">
       <div class="sidebar-sticky">
         <ul class="list-unstyled">
-          <li><a href="#">序言</a></li>
           <li>
-            <svg class="bi bi-caret-right-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-              <path d="M12.14 8.753l-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 011.659-.753l5.48 4.796a1 1 0 010 1.506z"/>
-            </svg>
+            <div class="wholerow"></div>
+            <i class="iconfont"></i>
+            <a href="#">序言</a>
+          </li>
+          <li>
+            <i class="iconfont icon-caret-right"></i>
             <a href="#">基础</a>
             <ul class="list-unstyled">
               <li><a href="#">开发规范</a></li>
