--- a/assets/css/iconfont.css
+++ b/assets/css/iconfont.css
@@ -9,10 +9,13 @@
 
 .iconfont {
   font-family: "iconfont" !important;
-  font-size: 16px;
+  font-size: 14px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: inline-block;
+  width: 14px;
+  height: 14px;
 }
 
 .icon-sort-down:before {
