--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -108,6 +108,23 @@ body {
 .sidebar-sticky > ul ul {
   display: none;
 }
-.pl-18 {
-  padding-left: 18px;
+.sidebar-sticky > ul li {
+  line-height: 30px;
+  cursor: pointer;
+  white-space: nowrap;
+  width: 100%;
+  overflow: hidden;
+}
+.sidebar-sticky > ul li .wholerow{
+  width: 100%;
+  position: absolute;
+  left: 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  height: 30px;
+}
+.sidebar-sticky > ul li a {
+  color: #666666;
 }
