--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -28,10 +28,11 @@
         <ul class="list-unstyled">
           <li>
             <div class="wholerow"></div>
-            <i class="iconfont"></i>
+            <i class="iconfont">&ensp;</i>
             <a href="#">序言</a>
           </li>
           <li>
+            <div class="wholerow"></div>
             <i class="iconfont icon-caret-right"></i>
             <a href="#">基础</a>
             <ul class="list-unstyled">
