--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -104,7 +104,7 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
-.sidebar-sticky{
+.sidebar-sticky {
   padding-left: 10px;
 }
 .sidebar-sticky > ul ul {
@@ -117,8 +117,8 @@ body {
   width: 100%;
   overflow: hidden;
 }
-.sidebar-sticky > ul li .wholerow{
-  width: 100%;
+.sidebar-sticky > ul li .wholerow {
+  width: calc(100% - 1px);
   position: absolute;
   left: 0;
   -webkit-user-select: none;
@@ -126,9 +126,10 @@ body {
   -ms-user-select: none;
   user-select: none;
   height: 30px;
+  z-index: -1;
 }
 .sidebar-sticky > ul li .wholerow:hover{
-  background-color: #fafafa;
+  background-color: #f0f0f0;
 }
 .sidebar-sticky > ul li a {
   color: #666666;
