--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -128,7 +128,7 @@ body {
   height: 30px;
   z-index: -1;
 }
-.sidebar-sticky > ul li .wholerow:hover{
+.sidebar-sticky > ul li:hover > .wholerow{
   background-color: #f0f0f0;
 }
 .sidebar-sticky > ul li a {
