--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="{{ "/favicon.ico" | relative_url }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="{{ "/assets/css/iconfont.css" | relative_url }}">
-<link rel="stylesheet" href="{{ "/assets/css/dashboard.css" | relative_url }}">
+<link rel="stylesheet" href="{{ "/assets/css/doc.css" | relative_url }}">
 {% feed_meta %}
 </head>
 <body>
@@ -50,5 +50,6 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.0/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
+<script src="{{ "/assets/js/doc.js" | relative_url }}"></script>
 </body>
 </html>
