--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -35,8 +35,12 @@
             <div class="wholerow"></div>
             <i class="iconfont icon-caret-right"></i>
             <a href="#">基础</a>
-            <ul class="list-unstyled">
-              <li><a href="#">开发规范</a></li>
+            <ul id="aa" class="list-unstyled collapse">
+              <li>
+                <div class="wholerow"></div>
+                <i class="iconfont">&ensp;</i>
+                <a href="#">开发规范</a>
+              </li>
             </ul>
           </li>
         </ul>
