--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -35,7 +35,7 @@
             <div class="wholerow"></div>
             <i class="iconfont icon-caret-right"></i>
             <a href="#">基础</a>
-            <ul id="aa" class="list-unstyled collapse">
+            <ul class="list-unstyled collapse">
               <li>
                 <div class="wholerow"></div>
                 <i class="iconfont">&ensp;</i>
