--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -41,6 +41,14 @@
                 <i class="iconfont">&ensp;</i>
                 <a href="#">开发规范</a>
               </li>
+              <div class="wholerow"></div>
+              <i class="iconfont">&ensp;</i>
+              <a href="#">开发规范</a>
+            </li>
+            <div class="wholerow"></div>
+            <i class="iconfont">&ensp;</i>
+            <a href="#">开发规范</a>
+          </li>
             </ul>
           </li>
         </ul>
