--- a/assets/css/doc.css
+++ b/assets/css/doc.css
@@ -134,6 +134,6 @@ body {
 .sidebar-sticky > ul li a:hover{
   text-decoration: none;
 }
-.sidebar-sticky .collapse li {
+.sidebar-sticky > ul > li > ul > li {
   margin-left: 20px;
 }
