--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -53,6 +53,28 @@
               </li>
             </ul>
           </li>
+          <li>
+            <div class="wholerow"></div>
+            <i class="iconfont icon-caret-right"></i>
+            <a href="#">基础</a>
+            <ul class="list-unstyled collapse">
+              <li>
+                <div class="wholerow"></div>
+                <i class="iconfont">&ensp;</i>
+                <a href="#">开发规范</a>
+              </li>
+              <li>
+                <div class="wholerow"></div>
+                <i class="iconfont">&ensp;</i>
+                <a href="#">开发规范</a>
+              </li>
+              <li>
+                <div class="wholerow"></div>
+                <i class="iconfont">&ensp;</i>
+                <a href="#">开发规范</a>
+              </li>
+            </ul>
+          </li>
         </ul>
       </div>
     </nav>
