--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -4,35 +4,22 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-{%- seo -%}
+{% seo %}
 <link rel="shortcut icon" href="{{ "/favicon.ico" | relative_url }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="{{ "/assets/css/iconfont.css" | relative_url }}">
-<link rel="stylesheet" href="{{ "/assets/css/doc.css" | relative_url }}">
+<link rel="stylesheet" href="{{ "/assets/css/sidebar.css" | relative_url }}">
 {% feed_meta %}
 </head>
 <body>
-<nav class="navbar navbar-light navbar-expand-lg bg-light fixed-top flex-md-nowrap shadow">
-  <a href="{{ "/doc/1.0/index.html" | relative_url }}">首页</a>
-  <div class="navbar-nav">
-    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-    <a class="nav-item nav-link" href="#">Features</a>
-    <a class="nav-item nav-link" href="#">Pricing</a>
-    <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-  </div>
-</nav>
 <div class="container-fluid">
   <div class="row">
-    <div class="embed-responsive">
-      <iframe class="embed-responsive-item" frameborder="0" src="{{ "/doc/1.0/sidebar.html" | relative_url }}"></iframe>
-    </div>
-    <main class="col-md-9 ml-sm-auto col-lg-10 px-4" role="main">
-      {{ content }}
-    </main>
+    {{ content }}
   </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.0/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
+<script src="{{ "/assets/js/doc.js" | relative_url }}"></script>
 </body>
 </html>
