--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -23,7 +23,7 @@
 </nav>
 <div class="container-fluid">
   <div class="row">
-    <div class="embed-responsive">
+    <div class="embed-responsive col-md-2" style="height: 100vh;">
       <iframe class="embed-responsive-item" frameborder="0" src="{{ "/doc/1.0/sidebar.html" | relative_url }}"></iframe>
     </div>
     <main class="col-md-9 ml-sm-auto col-lg-10 px-4" role="main">
